# swift-tools-support-core

./: .gitignore  CMakeLists.txt  CODEOWNERS  Package.resolved  Package.swift  README.md  debug  debug.yaml  vcpkg.json
.github/workflows/: automerge.yml  pull_request.yml
Sources/: CMakeLists.txt
Sources/TSCBasic/: Await.swift  ByteString.swift  CMakeLists.txt  Closable.swift  CodableResult.swift  CollectionExtensions.swift  Condition.swift  DeltaAlgorithm.swift  DiagnosticsEngine.swift  EditDistance.swift  FileInfo.swift  FileSystem.swift  GraphAlgorithms.swift  HashAlgorithms.swift  JSON.swift  KeyedPair.swift  LazyCache.swift  Lock.swift  ObjectIdentifierProtocol.swift  OrderedDictionary.swift  OrderedSet.swift  Path.swift  PathShims.swift  Process.swift  ProcessEnv.swift  ProcessSet.swift  RegEx.swift  Result.swift  SortedArray.swift  StringConversions.swift  TemporaryFile.swift  TerminalController.swift  Thread.swift  WeakDictionary.swift  Win32Error.swift  WritableByteStream.swift  WritableyteStream.swift  misc.swift
Sources/TSCBasic/Process/: Process.swift  ProcessEnv.swift  ProcessEnvironment.swift  ProcessSet.swift
Sources/TSCLibc/: CMakeLists.txt  libc.swift
Sources/TSCTestSupport/: AssertMatch.swift  CMakeLists.txt  FileSystemExtensions.swift  Product.swift  PseudoTerminal.swift  SwiftTestingHelpers.swift  XCTAssertHelpers.swift  XCTestCasePerf.swift  misc.swift
Sources/TSCUtility/: Archiver.swift  ArgumentParser.swift  ArgumentParserShellCompletion.swift  Bits.swift  Bitstream.swift  BitstreamReader.swift  BitstreamWriter.swift  BuildFlags.swift  CMakeLists.txt  Context.swift  Diagnostics.swift  Downloader.swift  FSWatch.swift  Git.swift  IndexStore.swift  InterruptHandler.swift  JSONMessageStreamingParser.swift  Netrc.swift  PersistenceCache.swift  PkgConfig.swift  Platform.swift  PolymorphicCodable.swift  ProgressAnimation.swift  SQLite.swift  SerializedDiagnostics.swift  SimplePersistence.swift  Tracing.swift  Triple.swift  URL.swift  Verbosity.swift  Version.swift  Versioning.swift  dlopen.swift  misc.swift
Sources/TSCclibc/: CMakeLists.txt  process.c  strerror.c
Sources/TSCclibc/include/: indexstore_functions.h  module.modulemap  process.h  strerror.h
Tests/TSCBasicPerformanceTests/: ByteStringPerfTests.swift  PathPerfTests.swift  SHA256PerfTests.swift  SortedArrayPerfTests.swift  SynchronizedQueuePerfTests.swift  WritableByteStreamPerfTests.swift
Tests/TSCBasicTests/: ByteStringTests.swift  EditDistanceTests.swift  FileSystemTests.swift  GraphAlgorithmsTests.swift  LazyCacheTests.swift  LockTests.swift  ObjectIdentifierProtocolTests.swift  POSIXTests.swift  PathShimTests.swift  PathTests.swift  PathWindowsRelativeTests.swift  ProcessEnvTests.swift  ProcessSetTests.swift  ProcessTests.swift  RegExTests.swift  SHA256Tests.swift  SendableTests.swift  StringConversionsTests.swift  SynchronizedQueueTests.swift  TemporaryFileTests.swift  WritableByteStreamTests.swift  XCTestManifests.swift  miscTests.swift
Tests/TSCBasicTests/processInputs/: long-stdout-stderr
Tests/TSCUtilityTests/: ArchiverTests.swift  ArgumentParserTests.swift  BitstreamTests.swift  DownloaderTests.swift  NetrcTests.swift  PersistentCacheTests.swift  PkgConfigParserTests.swift  PlatformTests.swift  PolymorphicCodableTests.swift  ProgressAnimationTests.swift  SQLiteTests.swift  SendableTests.swift  SerializedDiagnosticsTests.swift  SimplePersistenceTests.swift  StringTests.swift  TracingTests.swift  TripleTests.swift  VersionTests.swift  XCTestManifests.swift  miscTests.swift
Tests/TSCUtilityTests/Inputs/: category-url.dia  multiblock.dia  no-location.dia  string_init_ambig.dia
Tests/TSCUtilityTests/pkgconfigInputs/: harfbuzz.pc
Utilities/: build-script-helper.py  build-using-cmake  import
Utilities/ci.xcworkspace/xcshareddata/swiftpm/: Package.resolved
